# dramaX

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  deploy.config.template  deploy.sh  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: CI-PRpipeline.yml  CICD-pipeline.yml  changelog.yml  ci.yml
examples/read_file/: README.md  api_tasks.py  api_test.py  docker_tasks.py  dramax_api_example.py  dramax_api_test.py  main.py
scripts/: start-all.sh  stop-all.sh
src/dramax/: __init__.py  __main__.py  configure_logger.py  database.py  exceptions.py  manager.py  settings.py
src/dramax/api/: app.py  dependencies.py
src/dramax/api/routes/: workflow.py
src/dramax/common/: configure_logger.py  exceptions.py  settings.py
src/dramax/executor/: docker.py
src/dramax/models/: __init__.py  task.py  workflow.py
src/dramax/models/databases/: minio.py  mongo.py
src/dramax/models/dramatiq/: manager.py  scheduler.py  task.py  workflow.py
src/dramax/models/executor/: __init__.py  api.py  base.py  docker.py
src/dramax/services/: executor_service.py  minio.py  mongo.py
src/dramax/worker/: __init__.py  executor_service.py  scheduler.py  setup_worker.py  utils.py  worker.py
tests/: test_task.py
