[project]
name = "dramax"
description = "dramaX is a Python library for orchestrating distributed tasks."
readme = "README.md"
requires-python = "==3.12.*"
authors = [
    { name = "Khaos Research Group", email = "khaos.research@gmail.com" },
]
classifiers=[
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.97.0",
    "pydantic[dotenv]~=1.10.5", # TODO: migrate to 2.0.0
    "structlog>=23.1.0",
    "uvicorn>=0.22.0",
    "requests>=2.31.0",
    "dramatiq[rabbitmq,watch]>=1.14.2",
    "pymongo>=4.3.3",
    "minio>=7.1.15",
    "docker>=6.1.3",
    "pre-commit>=4.2.0",
]
dynamic = ["version"]

[project.optional-dependencies]
complete = ["mypy", "ruff", "pytest"]

[project.scripts]
dramax = "dramax.__main__:cli"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff.lint]
select = [
    "ALL",  # fixme (TODO/FIXME)
]
ignore = [
    "N805", # cls in pydantic wrappers
    "D100", # too much docs
    "D101", # too much docs
    "D102", # too much docs
    "D103", # too much docs
    "D104", # too much docs
    "D105", # too much docs
    "D106", # too much docs
    "D107", # too much docs
    "D417",
    "FA100",
    "D203", "D213", "D200", "D401", "ANN101", "ANN102",
    "ANN003", # Annotation for **query
    "INP001", # __init__.py for pkg
    "COM812", "ISC001"
]

[tool.hatch.version]
path = "src/dramax/__init__.py"

[tool.mypy]
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
warn_unused_configs = true
pretty = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
