[project]
name = "dramax"
description = "dramaX is a Python library for orchestrating distributed tasks."
readme = "README.md"
requires-python = ">=3.7"
authors = [
    { name = "Khaos Research Group", email = "khaos.research@gmail.com" },
]
classifiers=[
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Typing :: Typed",
]
dependencies = [
    # Paquetes comunes con versiones exactas del entorno “revivir-titan”
    "anyio==4.11.0",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "certifi==2025.7.14",
    "cffi==2.0.0",
    "charset-normalizer==3.4.2",
    "click==8.3.0",
    "dnspython==2.8.0",
    "docker==7.1.0",
    "dramatiq==1.18.0",
    "dramax==1.1.0",
    "exceptiongroup==1.3.0",
    "fastapi==0.117.1",
    "gevent==25.9.1",
    "greenlet==3.2.4",
    "h11==0.16.0",
    "idna==3.10",
    "minio==7.2.16",
    "pika==1.3.2",
    "prometheus_client==0.23.1",
    "pycparser==2.23",
    "pycryptodome==3.23.0",
    "pydantic==1.10.23",
    "pymongo==4.15.1",
    "python-dotenv==1.1.1",
    "requests==2.32.4",
    "setuptools==80.9.0",
    "sniffio==1.3.1",
    "starlette==0.48.0",
    "structlog==25.4.0",
    "typing_extensions==4.15.0",
    "urllib3==2.5.0",
    "uvicorn==0.37.0",
    "watchdog==6.0.0",
    "watchdog_gevent==0.2.1",
    "zope.event==6.0",
    "zope.interface==8.0",

]
dynamic = ["version"]

[project.optional-dependencies]
complete = ["mypy", "ruff", "pytest"]

[project.scripts]
dramax = "dramax.__main__:cli"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
select = [
    "E",
    "W",
    "F",
    "I",
    "C",
    "B",
]
ignore = [
    "E501",
    "B008",
    "C901",
]

[tool.hatch.version]
path = "src/dramax/__init__.py"

[tool.mypy]
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
warn_unused_configs = true
pretty = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"